[package]
name = "req_cache"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "restful",
    "consul",
    "config",
] }

anyhow = "1.0"
axum = "0.6"
clap = { version = "4.4", features = ["derive"] }
figment = { version = "0.10", features = ["toml"] }
hyper = "0.14"
notify = { version = "6.1", features = ["serde"] }
parking_lot = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage_hal = "0.1"
tokio = { version = "1.33", features = ["full"] }
tracing = "0.1"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
