[package]
name = "req_cache"
version = "0.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "restful",
    "consul",
    "config",
] }

clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
parking_lot = "0.12"
regex = "1.10"
salvo = { version = "0.58", features = ["affix"] }
serde = { version = "1.0", features = ["derive"] }
storage_hal = "0.1"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"

[profile.release.package."*"]
debug = 0

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
